# video-editor

./: Cargo.toml  README.md
video-editor-cli/: Cargo.toml
video-editor-cli/src/: command.rs  main.rs
video-editor-lib/: Cargo.toml
video-editor-lib/src/: clip.rs  editor.rs  lib.rs  timeline.rs
video-editor-lib/tests/test clips/: Source.txt
